--- a/vuejs-portlet/features/localization/Language.properties
+++ b/vuejs-portlet/features/localization/Language.properties
@@ -4,7 +4,5 @@ portlet-namespace=Portlet Namespace
 context-path=Context Path
 portlet-element-id=Portlet Element Id
 configuration=Configuration
-parent-title=Parent Title
-parent-title-help=The title for the parent component
-child-title=Child Title
-child-title-help=The title for the child component
+title=Title
+title-help=The title for the component
