adding better default code for vue

--- a/vuejs-ts-portlet/features/localization/Language.properties
+++ b/vuejs-ts-portlet/features/localization/Language.properties
@@ -1,5 +1,7 @@
 vuejs-ts-portlet=Vuejs TypeScript Portlet
 javax.portlet.title.vuejstsportlet=Vuejs TypeScript Portlet
+category.vuejs-typescript-portlet=Vue.js TypeScript Portlet Configuration
+vuejs-typescript-portlet=Vue.js TypeScript Portlet Configuration
 portlet-namespace=Portlet Namespace
 context-path=Context Path
 portlet-element-id=Portlet Element Id
