--- a/vuejs-ts-portlet/features/localization/Language.properties
+++ b/vuejs-ts-portlet/features/localization/Language.properties
@@ -1,5 +1,5 @@
-vuejs-ts-portlet=Vuejs TypeScript Portlet
-javax.portlet.title.vuejstsportlet=Vuejs TypeScript Portlet
+vuejs-ts-portlet=Vue.js TypeScript Portlet
+javax.portlet.title.vuejstsportlet=Vue.js TypeScript Portlet
 category.vuejs-typescript-portlet=Vue.js TypeScript Portlet Configuration
 vuejs-typescript-portlet=Vue.js TypeScript Portlet Configuration
 portlet-namespace=Portlet Namespace
