Updating vue.js portlet to version 1.1.0 with several improvements

--- a/vuejs-portlet/features/localization/Language.properties
+++ b/vuejs-portlet/features/localization/Language.properties
@@ -1,5 +1,6 @@
-vuejs-portlet=Vuejs Portlet
-javax.portlet.title.vuejsportlet=Vuejs Portlet
+vuejs-portlet=Vue.js Portlet
+javax.portlet.title.vuejsportlet=Vue.js Portlet
+category.vuejs-portlet=Vue.js Portlet Configuration
 portlet-namespace=Portlet Namespace
 context-path=Context Path
 portlet-element-id=Portlet Element Id
