Updating vue.js vuex portlet with several improvements

--- a/vuejs-vuex-portlet/features/localization/Language.properties
+++ b/vuejs-vuex-portlet/features/localization/Language.properties
@@ -1,5 +1,6 @@
-vuejs-vuex-portlet=Vuejs Vuex Portlet
-javax.portlet.title.vuejsvuexportlet=Vuejs Vuex Portlet
+vuejs-vuex-portlet=Vue.js Vuex Portlet
+javax.portlet.title.vuejsvuexportlet=Vue.js Vuex Portlet
+category.vuejs-vuex-portlet=Vue.js Vuex Portlet Configuration
 portlet-namespace=Portlet Namespace
 context-path=Context Path
 portlet-element-id=Portlet Element Id
