--- a/vuejs-portlet/features/localization/Language.properties
+++ b/vuejs-portlet/features/localization/Language.properties
@@ -1,6 +1,6 @@
-vuejs-portlet=Vue.js Portlet
-javax.portlet.title.vuejsportlet=Vue.js Portlet
-category.vuejs-portlet=Vue.js Portlet Configuration
+jspdf-portlet=jsPDF Portlet
+javax.portlet.title.jspdfportlet=jsPDF Portlet
+category.jspdf-portlet=jsPDF Portlet Configuration
 portlet-namespace=Portlet Namespace
 context-path=Context Path
 portlet-element-id=Portlet Element Id
